# nflz

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: minimal.rs
src/: error.rs  file_info.rs  fs_util.rs  fsutil.rs  globals.rs  lib.rs  main.rs  math.rs  math_util.rs  nflz.rs  parse.rs  rename.rs  validation.rs
