[package]
name = "nflz"
version = "0.1.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"
include = [
    "./test" # todo check if this is required in order to build in CI
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"

