[package]
name = "nflz"
description = "CLI + Library to add leading zeros to ascending numbered file names. NFLZ stands for Numbered Files Leading zeros."
version = "0.1.1"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"
keywords = ["file", "filename", "ascending", "numbered", "zeros"]
categories = [ "command-line-utilities", "filesystem" ]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/nflz"
repository = "https://github.com/phip1611/nflz"
documentation = "https://docs.rs/nflz/"

[dependencies]
regex = "1.4.3"
