[package]
name = "nflz"
description = "CLI + Library to add leading zeros to ascending numbered file names. NFLZ stands for Numbered Files Leading Zeros."
version = "1.0.2"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2021"
keywords = ["file", "filename", "ascending", "numbered", "zeros"]
categories = [ "command-line-utilities", "filesystem" ]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/nflz"
repository = "https://github.com/phip1611/nflz"
documentation = "https://docs.rs/nflz/"

exclude = [
    ".github",
    "test-resources",
]

[dependencies]
regex = "1.5"
log = "0.4"

[dev-dependencies]
fs_extra = "1.2"
